--- a/style.css
+++ b/style.css
@@ -185,9 +185,10 @@ nav ul li a:hover{
 
 /* About */
 #about{
-    padding-bottom: 250px;
-    padding-top: 250px;
+    padding-bottom: 200px;
+    padding-top: 150px;
 }
+
 .intro{
     display: flex;
     flex-direction: column;
@@ -195,13 +196,15 @@ nav ul li a:hover{
     align-items: center;
 
 }
+
 .intro h1{
     font-size: 2.5rem;
     color: #182343;
 }
+
 .about-me{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 3rem;
     padding-left: 10rem;
@@ -217,21 +220,30 @@ nav ul li a:hover{
 .about-desp{
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 2.5rem;
 }
 
-.about-btn{
+.about-box{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+}
+.abt-box{
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    height: 200px;
+    width: 400px;
+    border: 2px solid #182343;
+    border-radius: 1rem;
+    padding: 20px;
+    transition: all 350ms ease-in-out;
 }
 
-.abt-btn{
-    padding: 50px 50px;
-    border: 2px solid #182343;
-    border-radius: 6px;
-    background-color: transparent;
-    font-weight: 500;
-    width: fit-content;
-    cursor: pointer;
+.abt-box:hover{
+    background-color: #182343;
+    color: white;
+}
+
+.abt-box h2{
+    color: #E34F4F;
 }
