--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ nav ul li a:hover{
     gap: 2.5rem;
 }
 
-.about-box{
+.about-boxes{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     gap: 2rem;
@@ -246,4 +246,46 @@ nav ul li a:hover{
 
 .abt-box h2{
     color: #E34F4F;
+}
+
+/* Project */
+
+.projects-intro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.projects-intro h1{
+    font-size: 2.5rem;
+    color: #182343;
+}
+
+#projects{
+    padding-top: 150px;
+    padding-bottom: 150px;
+
+}
+.projects-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 50px;
+}
+.project-box{
+    height: 500px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #182343;
+    border-radius: 2rem;
+    font-size: smaller;
+    padding: 20px;
+}
+.project-box img{
+    width: 150px;
+    object-fit: cover;
+    border-radius: 6px;
 }
