--- a/style.css
+++ b/style.css
@@ -185,8 +185,7 @@ nav ul li a:hover{
 
 /* About */
 #about{
-    padding-bottom: 200px;
-    padding-top: 150px;
+    padding: 150px 0 150px 0;
 }
 
 .intro{
@@ -271,10 +270,11 @@ nav ul li a:hover{
     justify-content: space-evenly;
     align-items: center;
     margin-top: 50px;
+    padding: 0 20px 0 20px;
 }
 .project-box{
-    height: 500px;
-    width: 400px;
+    height: 450px;
+    width: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -283,9 +283,52 @@ nav ul li a:hover{
     border-radius: 2rem;
     font-size: smaller;
     padding: 20px;
+    transition: 350ms ease-in-out;
 }
 .project-box img{
     width: 150px;
     object-fit: cover;
     border-radius: 6px;
+}
+
+.project-box button{
+    padding: 10px 24px;
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    background-color: #182343;
+    border-radius: 3rem;
+    font-weight: 500;
+    width: fit-content;
+    cursor: pointer;
+    font-family: inherit;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.project-box:hover{
+    background-color: #182343;
+    color: white;
+    transform: scale(1.2);
+}
+.project-box button:hover{
+    background-color: #ffffff;
+    color: #182343;
+}
+
+/* Experience */
+#experience{
+    padding: 150px 0 150px 0;
+}
+
+.exp-intro h1{
+    font-size: 2.5rem;
+    color: #182343;
+}
+
+.exp-intro{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
