--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ nav ul li a:hover{
     display: flex;
     align-items: center;
     gap: 8px;
+    transition: all 0.2s ease-in-out;
 }
 
 .contact:hover{
@@ -150,12 +151,14 @@ nav ul li a:hover{
     background-color: #182343;
     color: white;
     gap: 2px;
+    transition: all 0.2s ease-in-out;
 }
 
 #btn2{
     background-color: white;
     color: #182343;
     gap: 2px;
+    transition: all 0.2s ease-in-out;
 }
 
 #btn1:hover {
@@ -327,6 +330,7 @@ nav ul li a:hover{
     color: #182343;
     gap: 5px;
     border-radius: 10px;
+    transition: all 0.2s ease-in-out;
 }
 
 .project-btn:hover{
@@ -390,7 +394,7 @@ nav ul li a:hover{
     align-items: center;
 }
 
-.exp-line{
+.hor-line{
     background-color: #182343;
     height: 2px;
     /* width: 80vw; */
@@ -423,9 +427,9 @@ nav ul li a:hover{
     font-size: 11px;
 }
 
-/* Skills */
-#skills{
-    padding: 500px 0 200px 0;
+/* Achievements */
+#achievements{
+    padding: 500px 0 400px 0;
 }
 .skills-intro h1{
     font-size: 2.5rem;
@@ -437,4 +441,64 @@ nav ul li a:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.skill-certificates{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 65px;
+    margin-bottom: 20px;
+}
+.ver-img{
+    height: 50px;
+    border: 1px solid #182343;
+    transition: all 0.2s ease-in-out;
+}
+
+.ver-img:hover{
+    transform: scale(1.2);
+}
+
+.ver-line{
+    background-color: #182343;
+    height: 93px;
+    width: 1px;
+    margin: 0 100px;
+}
+
+.ver-line h3{
+    font-size: 14px;
+    position: relative;
+    top: 100px;
+}
+/* background */
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    padding-top: 60px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.8);
+}
+/* image */
+.modal-content{
+    display: block;
+    margin: auto;
+    max-width: 80%;
+    max-height: 80vh;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #fff;
+}
+/* Close button */
+.close{
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
 }
