--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ nav ul li a:hover{
 
 /* Experience */
 #experience{
-    padding: 150px 0 150px 0;
+    padding: 150px 0 420px 0;
 }
 
 .exp-intro h1{
@@ -429,7 +429,7 @@ nav ul li a:hover{
 
 /* Achievements */
 #achievements{
-    padding: 500px 0 400px 0;
+    padding: 350px 0 400px 0;
 }
 .skills-intro h1{
     font-size: 2.5rem;
@@ -501,4 +501,128 @@ nav ul li a:hover{
     font-size: 40px;
     font-weight: bold;
     cursor: pointer;
+}
+
+/* Footer */
+footer{
+    background-color: #182343;
+    color: white;
+}
+.contactme-intro h1{
+    font-size: 2.5rem;
+    color: white;
+}
+
+.contactme-intro{
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contactme-container{
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-bottom: 100px;
+}
+
+.sender-info{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+.contactme{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+
+.contact-inputs{
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #182343;
+    border-radius: 20px;
+    font-family: "Montserrat", sans-serif;
+}
+
+.contactme textarea{
+    width: 820px;
+    height: 300px;
+    padding: 15px;
+    border-radius: 20px;
+}
+
+.contact-inputs:focus{
+    border: 2px solid #2790e0;
+}
+
+.contact-inputs::placeholder{
+    color: #a9a9a9;
+}
+
+.contactme button{
+    width: 820px;
+    padding-left: 380px;
+}
+
+.closure hr{
+    margin: 0 30px 0 30px;
+}
+.clo-intro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 60px 0 30px 0;
+    color: white;
+}
+
+.clo-intro a{
+    text-decoration: none;
+    color: white;
+}
+
+.clo-intro p{
+    font-size: smaller;
+    padding-left: 20px;
+}
+
+.clo-intro a:hover{
+    color: #2790e0;
+}
+
+.footer-socials ul a{
+    color: white;
+    text-decoration: none;
+}
+
+.footer-socials ul a:hover{
+    color: #E34F4F;
+}
+
+.footer-socials ul li{
+    list-style: none;
+}
+
+.footer-socials ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.copy-social{
+    display: flex;
+    font-size: small;
+    padding: 25px 0 25px;
+    justify-content: space-between;
+    margin: 0 30px 0 30px;
 }
