--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     text-decoration: none;
 }
 
+body.fade-out {
+  opacity: 0;
+  transition: opacity 0.6s ease;
+}
+
+
 body{
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
@@ -504,10 +510,6 @@ nav ul li a:hover{
 }
 
 /* Footer */
-/* footer{
-    background-color: #182343;
-    color: white;
-} */
 
 footer {
   background: linear-gradient(to top, #5a77cd 0%, #182343 100%);
