--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     color: #182343;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 header {
@@ -637,4 +638,160 @@ footer {
     padding: 25px 0 25px;
     justify-content: space-between;
     margin: 0 30px 0 30px;
+}
+
+/* ----------------------------------------------------------dark-mode Class----------------------------------------------------------*/
+body.dark-mode{
+    background-color: #04113a;
+}
+
+/* nav-bar */
+.nav-bar{
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+body.dark-mode .nav-bar{
+    background-color: rgb(214, 217, 236);
+    color: #04113a;
+}
+
+body.dark-mode .nav-bar ul li a,
+body.dark-mode .nav-bar .left a {
+    color: #04113a;
+}
+
+body.dark-mode .nav-bar ul li a:hover {
+    color: #E34F4F;
+}
+
+body.dark-mode .nav-bar .left a:hover {
+    color: #204bdb;
+}
+
+body.dark-mode .contact {
+    border: 1px solid #04113a;
+    color: #04113a;
+}
+
+body.dark-mode .contact:hover {
+    background-color: #04113a;
+    color: rgb(214, 217, 236);
+}
+
+/* Home: dark mode */
+.text{
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+body.dark-mode .text {
+    color: rgb(214, 217, 236);
+}
+body.dark-mode .btn {
+    border: 2px solid rgb(214, 217, 236);
+}
+
+body.dark-mode #btn1{
+    background-color: rgb(214, 217, 236);
+    color: #04113a;
+}
+
+body.dark-mode #btn2{
+    background-color: #04113a;
+    color: rgb(214, 217, 236);
+}
+
+body.dark-mode #btn1:hover {
+    background-color: #04113a;
+    color: rgb(214, 217, 236);
+}
+body.dark-mode #btn2:hover {
+    background-color: rgb(214, 217, 236);
+    color: #04113a;
+}
+
+body.dark-mode .social{
+    color: #70b6ec;
+}
+
+/* about me: dark mode */
+body.dark-mode .intro{
+    color: rgb(214, 217, 236);
+}
+body.dark-mode .intro h1{
+    color: rgb(214, 217, 236);
+}
+body.dark-mode .about-me-para{
+    color: #d6d9ec;
+}
+body.dark-mode .abt-box{
+    border: 2px solid rgb(214, 217, 236);
+    color: #d6d9ec;
+}
+
+body.dark-mode .abt-box:hover{
+    background-color: rgb(214, 217, 236);
+    color: #04113a;
+}
+body.dark-mode .abt-box h2{
+    color: #E34F4F;
+}
+
+/* Project: dark mode */
+body.dark-mode .projects-intro h1{
+    color: #d6d9ec;
+}
+body.dark-mode .projects-intro p{
+    color: #d6d9ec;
+}
+
+/* Experience: dark mode */
+body.dark-mode .exp-intro h1{
+    color: #d6d9ec;
+}
+body.dark-mode .exp-intro p{
+    color: #d6d9ec;
+}
+
+body.dark-mode .hor-line{
+    background-color: #d6d9ec;
+    color: #d6d9ec;
+}
+body.dark-mode .vertical{
+    background-color: #d6d9ec;
+    color: #d6d9ec;
+}
+
+body.dark-mode .exp-year{
+    color: #d6d9ec;
+}
+
+
+/* Achievements */
+body.dark-mode .skills-intro h1{
+    color: #d6d9ec;
+}
+body.dark-mode .skills-intro p{
+    color: #d6d9ec;
+}
+
+body.dark-mode .ver-img{
+    border: 1px solid #d6d9ec;
+}
+
+body.dark-mode .ver-line{
+    background-color: #d6d9ec;
+    color: #d6d9ec;
+}
+
+/* Footer */
+
+body.dark-mode footer {
+  background: linear-gradient(to top, #04113a 0%, #d6d9ec 100%);
+}
+
+body.dark-mode .footer-contact{
+    border: 2px solid #d6d9ec;
+    color: #d6d9ec;
+}
+body.dark-mode .footer-contact:hover{
+    background-color: #d6d9ec;
+    color: #182343;
 }
