--- a/styleForContact.css
+++ b/styleForContact.css
@@ -10,7 +10,10 @@ body {
 body.loaded {
   opacity: 1;
 }
-
+body.fade-out {
+  opacity: 0;
+  transition: opacity 0.6s ease;
+}
 body{
   background: linear-gradient(to top, #5a77cd 0%, #182343 100%);
   color: white;
