--- a/styleForContact.css
+++ b/styleForContact.css
@@ -66,6 +66,7 @@ body{
     font-weight: 500;
     color: #182343;
     border-radius: 20px;
+    font-size: 16px;
     font-family: "Montserrat", sans-serif;
 }
 
