--- a/styleForContact.css
+++ b/styleForContact.css
@@ -168,3 +168,74 @@ body{
     justify-content: space-between;
     margin: 0 30px 0 30px;
 }
+
+@media (max-width: 768px){
+    .contactme-intro h1{
+    font-size: 2.5rem;
+    color: white;
+}
+.contactme-container{
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-bottom: 100px;
+}
+
+.sender-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+.contactme{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+
+.contact-inputs{
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #182343;
+    border-radius: 20px;
+    font-size: 16px;
+    font-family: "Montserrat", sans-serif;
+}
+
+.contactme textarea{
+    width: 400px;
+    height: 300px;
+    padding: 15px;
+    border-radius: 20px;
+}
+
+.contactme button{
+    width: 400px;
+    padding-left: 150px;
+}
+
+.closure hr{
+    margin: 0 30px 0 30px;
+}
+
+.clo-intro p{
+    font-size: smaller;
+}
+
+.footer-socials ul a{
+    color: rgb(215, 239, 254);
+    text-decoration: none;
+    transition: all 0.5s ease-in-out;
+}
+
+.footer-socials ul a:hover{
+    color: #a3b1db;
+}
+}
